# config_manager-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: CI.yml
proto/: configuration.proto
src/: main.rs
src/api/: documentation.rs  mod.rs  rest.rs
src/config/: configuration.rs  group.rs  manager.rs  mod.rs
src/file_watcher/: file_watcher.rs
src/grpc/: grpc.rs
src/multiplex_service/: mod.rs
