[package]
name = "config_manager"
version = "0.1.0"
edition = "2021"
authors = ["Michał Capała <michaal.capala@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
hyper = "0.14.27"
log = "0.4.20"
notify = "6.1.1"
prost = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"
tonic-reflection = "0.10.2"
tower = "0.4.13"
tracing-subscriber = "0.3.17"
utoipa = "4.0.0"
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
